Fixed issues : 1. On click of dropdown button country list opens 2. Safari blur effect 3. content overflow in desktop  4. country list position

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -47,13 +47,14 @@ header nav a:any-link {
 }
 
 header .nav-menu-overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 1;
   width: 100vw;
-  overflow: hidden;
+  overflow: hidden scroll;
+  scroll-behavior: smooth;
   left: 0;
-  min-height: 70rem;
+  height: 100%;
   display: none;
 }
 
@@ -63,7 +64,7 @@ header .nav-menu-overlay.open {
 
 header .nav-menu-overlay .nav-menu {
   background-color: var(--primary-blue-100);
-  height: 70rem;
+  height: 100%;
   width: 100%;
   background-image: url("../../icons/swoosh/type4/default-m.svg");
   background-repeat: no-repeat;
@@ -245,7 +246,7 @@ header .nav-menu-overlay .nav-menu-column.left ul {
 }
 
 header .nav-menu-overlay .nav-menu-column.right .nav-menu-overlay-back {
-  position: absolute;
+  position: fixed;
   left: 30px;
   padding: 0;
   margin: 0;
@@ -446,7 +447,7 @@ header .nav-menu-overlay .nav-menu-column.right .nav-menu-overlay-back::after {
 }
 
 header .nav-menu-overlay .nav-menu-column.right .submenu-main-title {
-  position: absolute;
+  position: fixed;
   margin: 0 auto;
   width: 90%;
   display: flex;
@@ -496,15 +497,6 @@ header
   z-index: 3;
   padding: 17px 10px 17px 35px;
   border-radius: 40px;
-}
-
-header
-  .nav-menu-overlay
-  .nav-menu-column.right
-  .browse-country
-  input[type="text"]:focus
-  + .country-list {
-  display: block;
 }
 
 .section.nav-sections .default-content-wrapper p {
@@ -606,7 +598,7 @@ header nav[aria-expanded="true"] .nav-hamburger-icon {
   z-index: 3;
   background-color: var(--color-white);
   border-radius: 50%;
-  position: absolute;
+  position: fixed;
   right: 30px;
   top: 28px;
 }
@@ -646,7 +638,7 @@ header nav .nav-brand img {
 .nav-tools .default-content-wrapper {
   display: flex;
   align-items: center;
-  gap: 16px;
+  gap: 10px;
   justify-content: center;
 }
 
@@ -912,18 +904,9 @@ header nav .nav-tools {
     .country-list {
     width: 415px;
     left: 10px;
-    top: 0;
+    top: -15px;
     z-index: 2;
     background-color: var(--primary-blue-102);
-  }
-
-  header
-    .nav-menu-overlay
-    .nav-menu-column.right
-    .browse-country
-    input[type="text"]:focus
-    + .country-list {
-    display: block;
   }
 
   header .nav-menu-overlay .nav-menu-column.right .browse-country p {
@@ -974,16 +957,23 @@ header nav .nav-tools {
   }
 
   header .nav-menu-overlay {
+    position: absolute;
+    min-height: 75rem;
     width: 100%;
-    overflow-x: hidden;
+    scroll-behavior: smooth;
+    overflow-x: scroll;
     flex-direction: row;
     justify-content: center;
+  }
+
+  header .nav-menu-overlay::-webkit-scrollbar{
+    display: none;
   }
 
   header .nav-menu-overlay .nav-menu {
     display: flex;
     min-width: 100%;
-    height: 100%;
+    height: 100vh;
     background-image: url("../../icons/swoosh/type4/default-d.svg");
     flex-direction: row;
     background-size: 50% 100%;
@@ -1169,22 +1159,13 @@ header nav .nav-tools {
     .nav-menu-column.right
     .submenu
     li:has(ul.browse-country)
-    ul {
+    > ul {
+    border: none;
     margin: 0;
     padding: 0;
-    border: none;
     display: flex;
     flex-direction: row;
     align-items: center;
-  }
-
-  header
-    .nav-menu-overlay
-    .nav-menu-column.right
-    .submenu
-    li:has(ul.browse-country)
-    > ul {
-    border: none;
   }
 
   header
@@ -1202,6 +1183,7 @@ header nav .nav-tools {
 
   header nav[aria-expanded="true"] .nav-hamburger-icon {
     left: 30px;
+    position: absolute;
   }
 
   header nav .nav-sections .nav-drop::after {
@@ -1240,6 +1222,8 @@ header nav .nav-tools {
     background-color: var(--transparent);
     backdrop-filter: blur(2px);
     font-family: var(--body-font-family);
+    /* stylelint-disable-next-line property-no-vendor-prefix */
+    -webkit-backdrop-filter: blur(2px);
   }
 
   header .nav-menu-overlay.open .nav-menu {
@@ -1299,7 +1283,7 @@ header nav .nav-tools {
     width: 42vw;
     max-width: 530px;
     left: 10px;
-    top: 0;
+    top: -15px;
     z-index: 2;
     background-color: var(--primary-blue-102);
   }
@@ -1315,15 +1299,6 @@ header nav .nav-tools {
     font-weight: 400;
     line-height: 22.4px;
     text-align: left;
-  }
-
-  header
-    .nav-menu-overlay
-    .nav-menu-column.right
-    .browse-country
-    input[type="text"]:focus
-    + .country-list {
-    display: block;
   }
 
   header .nav-menu-overlay .nav-menu-column.right .browse-country p {
